# zurox-lang

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  mkdocs-deploy.yml  pages.yml
docs/: 404.html  index.html
docs/changes/: index.html
docs/compiler/compiler/: index.html
docs/compiler/internal/a_tokens/: index.html
docs/compiler/internal/b_lexer/: index.html
docs/compiler/internal/c_parser/: index.html
docs/docs/: index.md
docs/docs/compiler/internal/: lexer.md  tokens.md
docs/search/: search_index.json
docs_src/: mkdocs.yml
docs_src/docs/: changes.md  index.md
docs_src/docs/compiler/: compiler.md
docs_src/docs/compiler/internal/: a_tokens.md  b_lexer.md  c_parser.md
docs_src/modules/: setup.py
docs_src/modules/pymdown_zurox/: __init__.py  zx.py
docs_src/modules/pymdown_zurox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
grammar/: zurox.ebnf
include/: ast.hh  definitions.hh  lexer.hh  parser.hh  print.hh  table.hh  token.hh  version.hh  visitor.hh
include/parser/: body.hh  expression.hh  if.hh  jump.hh  loop.hh  match.hh  node.hh  root.hh  table.hh  var.hh
scripts/: build-dbg.sh  build-rel.sh  build-wrapper.sh  install-docs.sh  site.sh
src/: lexer.cc  main.cc  parser.cc  print.cc  table.cc
tests/: lexer_comments.cc  lexer_keywords.cc  lexer_seperator.cc
